--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 
         <h2>To Do</h2>
         <div id="cont-to-do-list">
-            <div class="item-to-do">
+            <!-- <div class="item-to-do">
                 <input type="checkbox">
                 <p>Item list 2</p>
                 <button>x</button>
-            </div> 
+            </div>  -->
         </div>
 
         <hr>
 
         <h2>Completed</h2>
         <div id="cont-completed">
-            <div class="item-to-do">
+            <!-- <div class="item-to-do">
                 <input type="checkbox"><p>Item list 2</p>
-            </div>
+            </div> -->
         </div>
 
     </section>
