Se agrego la funcion de detectar la tecla enter, se agregue un nuevo item

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Add Item</h2>
         <form action="#">
             <input type="text" id="to-do-input">
-            <button type="submit" id="add-btn"><i class="bi bi-plus"></i></button>
+            <button type="button" id="add-btn"><i class="bi bi-plus"></i></button>
         </form>
 
         <hr>
